--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.1",
+    "babel-eslint": "^10.0.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
@@ -34,31 +34,32 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.0",
     "css-loader": "^0.28.0",
-    "enzyme": "^2.8.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "expect": "^1.15.2",
-    "file-loader": "^0.11.1",
-    "jsdom": "^9.12.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "expect": "^23.6.0",
+    "file-loader": "^2.0.0",
+    "jsdom": "^12.0.0",
     "json-loader": "^0.5.4",
     "mini-css-extract-plugin": "^0.4.3",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.10.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-reporter": "^6.0.0",
-    "react-test-renderer": "^15.5.3",
+    "react-test-renderer": "^16.5.2",
     "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "1.2.2",
-    "sinon": "^2.1.0",
+    "redux-mock-store": "1.5.3",
+    "sinon": "^6.3.4",
     "source-map-support": "^0.5.9",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^1.10.1",
@@ -69,45 +70,45 @@
     "node": ">=6.x"
   },
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "axios": "^0.16.0",
+    "autoprefixer": "^9.1.5",
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "classnames": "^2.2.3",
     "compression": "^1.6.2",
-    "connect-mongo": "^1.3.2",
-    "connect-pg-simple": "^3.1.0",
+    "connect-mongo": "^2.0.1",
+    "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.2.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.2",
     "helmet": "^3.5.0",
     "lodash": "^4.16.2",
-    "method-override": "^2.3.8",
-    "mongoose": "^4.9.3",
-    "passport": "^0.3.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.2.17",
+    "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^6.1.5",
+    "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.4",
-    "react": "^15.5.3",
+    "react": "^16.5.2",
     "react-addons-test-utils": "^15.5.0",
-    "react-dom": "^15.5.3",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.0.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.3",
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.6.0",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.6.1",
-    "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0",
+    "sequelize": "^4.39.0",
+    "sequelize-cli": "^4.1.1",
     "serialize-javascript": "^1.4.0",
     "spark-md5": "^3.0.0"
   }
