--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "nodemon": "^2.0.4",
     "react-test-renderer": "^16.13.1",
     "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "^1.5.4",
     "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
     "style-loader": "^1.2.1",
@@ -91,6 +90,8 @@
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
@@ -107,14 +108,9 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.12.21",
-    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.1",
-    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
     "sequelize": "^5.21.9",
